k8s/letsencrtypt/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: kuard.am-devops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
  tls:
    - hosts:
      - kuard.am-devops.com
      secretName: kuard-tls
